topic/kubernetes/infra/prod/monitoring/prometheus-webhook-dingtalk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dingtalk-ingress-nginx
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/service-weight: ""
    #kubernetes.io/ingress.class: nginx-prod
spec:
  ingressClassName: nginx-prod
  rules:
  - host: kubedingtalk.cici.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-webhook-dingtalk
            port:
              number: 8060
